# NICAR

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
2026-public-records-llm/: README.md  notebook.ipynb  pyproject.toml
2026-public-records-llm/output/: merged_output.csv  trump_pardons.csv
output/: ig_report_foia_logs.csv
